# dndtools

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
src/kat/: core.hpp  engine.cpp  engine.hpp  math.hpp  presenter.cpp  presenter.hpp  window.cpp  window.hpp
